@@ -167,7 +167,6 @@ body {
     float: left;
     position: relative;
     padding-bottom: 20px;
-    overflow: hidden
 
 }
 
