@@ -505,3 +505,31 @@ ul.menu li ul li ul li ul li ul {
 .pull-left {
 	float: right;
 }
+
+/* ++++++ tooltip  +++++++ */
+.tooltip.right {
+	margin-left: -3px;
+}
+.tooltip.left {
+	margin-left: 3px;
+}
+.tooltip-inner {
+	text-align: right;
+}
+.tooltip.top .tooltip-arrow {
+	bottom: 0;
+	right: 50%;
+	margin-right: -5px;
+}
+.tooltip.right .tooltip-arrow {
+	left: 0;
+	border-width: 5px 0 5px 5px;
+}
+.tooltip.left .tooltip-arrow {
+	right: 0;
+	border-width: 5px 5px 5px 0;
+}
+.tooltip.bottom .tooltip-arrow {
+	right: 50%;
+	margin-right: -5px;
+}
